update from g3hwp to update_hwp_angle

--- a/tutorial_hwp.ipynb
+++ b/tutorial_hwp.ipynb
@@ -3,11 +3,68 @@
   {
    "cell_type": "markdown",
    "id": "7053908e-76a7-4886-8976-f7ebbb14fd6f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Simple analysis example of HWP using SO HK data \n",
     "SO HK data reading and writing tips: <br>\n",
     "https://so3g.readthedocs.io/en/latest/hk.html#writing-hk-data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "765a281e-8161-4126-bb3f-84ae3302a4c4",
+   "metadata": {},
+   "source": [
+    "## Run as script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "4b0bfae5-d309-4249-bc98-73b337ad86db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: update_hwp_angle.py [-h] -f [FILE [FILE ...]] [--output OUTPUT]\n",
+      "\n",
+      "Analyze HWP encoder data from level-2 HK data, and produce HWP angle solution\n",
+      "for all times.\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  -f [FILE [FILE ...]], --file [FILE [FILE ...]]\n",
+      "                        A filename or list of filenames (to be loaded in\n",
+      "                        order).\n",
+      "  --output OUTPUT       A path to output g3 file\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python update_hwp_angle.py -h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "998fb87e-05b3-4b20-8b33-a65495ca62aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "files=['/mnt/SOdata/pton-tsat/hk/16395/1639599416.g3']\n",
+      "output=./output.g3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python update_hwp_angle.py --file /mnt/SOdata/pton-tsat/hk/16395/1639599416.g3"
    ]
   },
   {
@@ -18,8 +75,8 @@
    },
    "source": [
     "## Import libraries\n",
-    "Import SO related libraries: so3g, g3thwp <br>\n",
-    "If you see any error after this, check the name of kernel. The kernel name must be soenv_20220401 at UTokyo workstation."
+    "Import SO related libraries: so3g, update_hwp_angle <br>\n",
+    "If you see any error after this, check the name of kernel. "
    ]
   },
   {
