update config, logger, hwpss

--- a/tutorial_hwp.ipynb
+++ b/tutorial_hwp.ipynb
@@ -150,6 +150,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5f6b10b-36d2-42e3-947d-73aecd78e2b4",
+   "metadata": {},
+   "source": [
+    "- Please prepare and use config yaml file to load HWP hardware info.<br>\n",
+    "- But it works without a config file using default values for convenience.<br>\n",
+    "- You can find example yaml file in simons1:/mnt/so1/users/ysakurai/hwp_configs/hwp_config.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41576777-68c0-4213-a2f4-7ac50479309c",
+   "metadata": {},
+   "source": [
+    "## config.yaml file example"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "63bdf8ff-7979-40f1-b75e-e6fbbefb5178",
+   "metadata": {},
+   "source": [
+    "# start and end time for `update_hwp_angle.load_data` \n",
+    "start: 1618369921\n",
+    "end: 1618373521\n",
+    "# HK data directory for `update_hwp_angle.load_data` \n",
+    "data_dir: '/mnt/so1/data/ucsd-sat1/hk/'\n",
+    "# input file name for `update_hwp_angle.load_file` \n",
+    "file_list: '/mnt/so1/data/ucsd-sat1/hk/16183/1618372860.g3'\n",
+    "# logger verbose\n",
+    "verbose: 3\n",
+    "# prefix of field name \n",
+    "# You might need to change HBA since it is different between SAT\n",
+    "field_instance: 'observatory.HBA.feeds.HWPEncoder'\n",
+    "# HWP encoder field list\n",
+    "field_list:\n",
+    "- 'rising_edge_count'\n",
+    "- 'irig_time'\n",
+    "- 'counter'\n",
+    "- 'counter_index'\n",
+    "- 'irig_synch_pulse_clock_time'\n",
+    "- 'irig_synch_pulse_clock_counts'\n",
+    "- 'quad'\n",
+    "# HWP OCS packet size\n",
+    "packet_size: 120\n",
+    "# number of encoder slot (570*2)\n",
+    "num_edges: 1140\n",
+    "# Reference slot width　\n",
+    "ref_edges: 2\n",
+    "# range of reference slot finding\n",
+    "ref_range: 0.25\n",
+    "# output g3 file path + name\n",
+    "output: './output.g3'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "bc82e14e-b57b-4484-8fed-68f3b0dda6d3",
